force-app/main/default/objects/clofor_com_cfs__PurInvACBal__c/fields/clofor_com_cfs__ACBalanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ACBalanceID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>clofor_com_cfs__ACBalance__c</referenceTo>
    <relationshipLabel>PUR INV+A/C BAL</relationshipLabel>
    <relationshipName>PIACBalanceID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>