force-app/main/default/objects/clofor_com_cfs__PurInvACBal__c/fields/clofor_com_cfs__AmountInclTaxLocalACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountInclTaxLocalACBal__c</fullName>
    <label>AMOUNT INCL TAX(LOCAL)-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>