force-app/main/default/objects/clofor_com_cfs__PurInvACBal__c/fields/clofor_com_cfs__AmountInclTaxLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountInclTaxLocalFormu__c</fullName>
    <formula>clofor_com_cfs__PurInvID__r.clofor_com_cfs__AmountIncludedTaxLocal__c</formula>
    <label>AMOUNT INCL TAX(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>