force-app/main/default/objects/clofor_com_cfs__PurInvACBal__c/fields/clofor_com_cfs__AmountInclTaxUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountInclTaxUSDFormu__c</fullName>
    <formula>clofor_com_cfs__PurInvID__r.clofor_com_cfs__AmountIncludedTax__c</formula>
    <label>AMOUNT INCL TAX(USD)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>