force-app/main/default/objects/clofor_com_cfs__PurInvACBal__c/fields/clofor_com_cfs__UnpaidBalUSDACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalUSDACBal__c</fullName>
    <label>UNPAID BAL(USD)-A/C BAL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>